start shaping demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,10 +5,15 @@
   <style>
     html {
       font-size: 10px; /* This is to match petabox's base font size */
+      font-family: sans-serif;
     }
 
     body {
-      background: #fafafa;
+      background: #222;
+    }
+
+    #item-navigator-modal {
+      display: none
     }
   </style>
 </head>
