checkpoint: main containers inheriting height, update menu slider version for border colors + share side panel inserted into theater placeholder

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <style>
-    html {
+    html, app-root {
       font-size: 10px; /* This is to match petabox's base font size */
       font-family: sans-serif;
       --primaryBGColor: var(--black, #000);
@@ -20,12 +20,7 @@
       --redBookmarkColor: #eb3223;
       --blueBookmarkColor: #0023f5;
       --greenBookmarkColor: #75ef4c;
-    }
 
-    item-navigator {
-      display: block;
-      width: 100%;
-      color: var(--primaryTextColor);
       --menuButtonLabelDisplay: block;
       --menuWidth: 320px;
       --menuSliderBg: var(--secondaryBGColor);
@@ -46,7 +41,7 @@
     }
 
     body {
-      background: #222;
+      background: black;
       color: #fff;
     }
 
