toggle the reader size when menu opens

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,10 +6,10 @@
     html, app-root {
       font-size: 10px; /* This is to match petabox's base font size */
       font-family: sans-serif;
-      --primaryBGColor: var(--black, #000);
+      --primaryBGColor: black;
       --secondaryBGColor: #222;
       --tertiaryBGColor: #333;
-      --primaryTextColor: var(--white, #fff);
+      --primaryTextColor: white;
       --primaryCTAFill: #194880;
       --primaryCTABorder: #c5d1df;
       --secondaryCTAFill: #333;
@@ -41,7 +41,6 @@
     }
 
     body {
-      background: black;
       color: #fff;
     }
 
